# ollama-practice

ollama-pdf-practice/: pyproject.toml
ollama-pdf-practice/ollama_pdf_practice/: test.ipynb
ollama-pdf-rag/: pyproject.toml
